# kikker-x

./: .clang-format  .gitattributes  .gitignore  IDEAS.md  LICENSE  README.md  biome.json  cameras_hub.py  checks.py  checks.sh  fake_server.py  format.py  format.sh  platformio.ini  pyproject.toml  video_saver.py
build_helpers/: embed_static.py  generate_version.py  prepare_config.py  strip_paths.py
configs/: .gitignore  README.md  config.json.template  default_config.json  platformio.ini.template
docs/: api.md  cameras-hub.md  development.md  getting-started.md  video-saver.md
helpers/: generate_logo_png.py
pylib/: __init__.py
src/: auth.cpp  auth.h  battery.cpp  battery.h  board.h  config.cpp  config.h  kikker-x.cpp  log.cpp  log.h  static.h  wifi_connect.cpp  wifi_connect.h
src/boards/: timercam_board.cpp  wrover_board.cpp
src/static/: hub.css  hub.html  hub.mjs  index.css  index.html  index.mjs  logs.html  logs.mjs  manifest.json  page_options.mjs  photo.html  photo.mjs  settings.css  settings.mjs  style.css  util.mjs  video.css  video.html  video.mjs
static/: config.css  config.html  config.mjs  hub.css  hub.html  hub.mjs  index.css  index.html  index.mjs  logs.css  logs.html  ota.css  ota.html  ota.mjs  settings.css  settings.mjs  style.css  util.mjs
