[project]
name = "kikker-x"
version = "1.0.0"
description = "Wi-Fi camera server firmware and dev tools for the M5Stack Timer Camera X"
license = { text = "MIT" }
authors = [{ name = "TPReal" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "Pillow",
    "requests",
]

[tool.ruff]
line-length = 120
builtins = ["Import", "Return", "Exit", "env"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
